fix overflow scrollbars

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,5 +1,8 @@
 html {
   height: 100%;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: $overflow-color-foreground $overflow-color-background;
 }
 
 body {
@@ -23,7 +26,7 @@ body {
     @include breakpoint($sm) {
       overflow-y: auto;
       scrollbar-width: thin;
-      scrollbar-color: #7777c0 #e0e0e0;
+      scrollbar-color: $overflow-color-foreground $overflow-color-background;
     }
 
     section {
